# laba-3

./: 111.txt  432.txt  555.txt  AA.cpp  CMakeCache.txt  CMakeLists.txt  DefaultFile.txt  Functions.cpp  Functions.h  Fynk.cpp  GNUmakefile  GRADES.md  Header.h  Lab2.cpp  Lab2.h  MakeFile  Makefile  Makefile.txt  MyProg  NINE.txt  Nine.txt  OTCHET.md  README.md  Tofile.txt  answer  cmake_install.cmake  dop.cpp  dop.h  engine.cpp  engine.h  f_add.cpp  f_add.h  file  file.txt  file3.txt  fileNegative.txt  fileint.txt  flags.cpp  fromfile.txt  func.cpp  (+57 more)
ConsoleApplication3/: ConsoleApplication3.cpp  ConsoleApplication3.sln  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  Makefile  fun.h  funs.cpp
ConsoleApplication3/x64/Debug/: ConsoleApplication3.exe.recipe  ConsoleApplication3.vcxproj.FileListAbsolute.txt  in.txt  (+2 more)
GoogleTest/: CMakeLists.txt  test.cpp
Project8/: LABA_№5.sln
Project8/Project8/: Makefile  Project8.vcxproj  Project8.vcxproj.filters  So.cpp  So.h  main  main.cpp
googletests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test.cpp
programFiles/: Answers.txt  FileWithText.txt  func.cpp  func.h  helloWorld  main.cpp  makefile
programWindowsRelease (!TEST!, first ver. is located in programFiles folder,for linux)/: Answers.txt  NINE.txt  makefile
src/: main.cpp  parse.cpp  progfunc.cpp  progmake.cpp  progmake.h  sort.cpp  tests.cpp
testfiles/: test1.txt  test1_ans.txt  test2.txt  test2_ans.txt  test3_ans.txt
tests and answers/: answers.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
(+28 files in other folders)
