cmake_minimum_required(VERSION 3.23)
project(Lab_5_Sorochaykin)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab_5_Sorochaykin main.cpp sortchar.cpp sortint.cpp)
#cmake_minimum_required(VERSION 3.23)
#project(second_lab)
#
#set(CMAKE_CXX_STANDARD 14)
#
#add_executable(second_lab calculator.cpp TypeFunction.cpp calculator.h MathFunction.cpp)
